Moved to Lab Folder
I moved the stuff from the first program to a testing folder.

--- a/laboratory/FirstApp_Fonderie.html
+++ b/laboratory/FirstApp_Fonderie.html
@@ -2,7 +2,7 @@
 <!--First application attempt with WebGL, Sydney Fonderie-->
 <html>
 	<head>
-		<script type="text/JavaScript" src="common/webgl-utils.js"></script>
+		<script type="text/JavaScript" src="../common/webgl-utils.js"></script>
 		<script type="text/JavaScript" src="clear.js"></script>
 	</head>
 	<body>
