--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<!--First application attempt with WebGL, Sydney Fonderie-->
+<!--Assignment 2, Sydney Fonderie-->
 <html>
 	<head>
 		<script type="text/JavaScript" src="../common/webgl-utils.js"></script>
+		<script type="text/JavaScript" src="clear.js"></script>
 	</head>
 	<body>
 		<canvas id="webgl-canvas" width="512" height="512" style="background-color: #0000FF"></canvas>
