--- a/assignment-3/cone-html.html
+++ b/assignment-3/cone-html.html
@@ -25,6 +25,6 @@
 		</script>
 	</head>
 	<body>
-		<canvas id="webgl-canvas" width="512" height="512"></canvas>
+		<canvas id="webgl-canvas" width="512" height="512" style="background-color: #0000ff"></canvas>
 	</body>
 </html>
