--- a/assignment-6/cube-html.html
+++ b/assignment-6/cube-html.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--Assignment 4, Sydney Fonderie-->
+<!--Assignment 6, Sydney Fonderie-->
 <html>
 	<head>
 		<meta charset="utf-8"/>
@@ -7,25 +7,33 @@
 		<script src="../common/webgl-utils.js"></script>
 		<script src="../common/init-shaders.js"></script>
 		<script src="../common/MV.js"></script>
-		<script src="../common/cube.js"></script>
+		<script src="cube-render.js"></script>
 		<script src="render-cube.js"></script>
 		
 		<script id="cube-vertex-shader" type="x-shader/x-vertex">
-			attribute vec4 vPosition;
+			attribute vec4 a_position;
+			attribute vec2 a_texcoord;
 			
-			uniform mat4 MV;
+			uniform mat4 u_matrix;
+			varying vec2 v_texcoord;
 			
 			void main()
 			{
-				gl_PointSize = 5.0;
-				gl_Position = MV * vPosition;
+				gl_Position = u_matrix * a_position;
+				v_texcoord = a_texcoord;
 			}
 		</script>
 
 		<script id="cube-fragment-shader" type="x-shader/x-fragment">
-			void main()
+			precision mediump float;
+			
+			varying vec2 v_texcoord;
+			
+			uniform sampler2D u_texture;
+			
+			void main() 
 			{
-				gl_FragColor = vec4(0.0, 0.0, gl_FrontFacing ? 1.0 : 0.0, 1.0);
+				gl_FragColor = texture2D(u_texture, v_texcoord);
 			}
 		</script>
 	</head>
