--- a/assignment-f/gimbal-html.html
+++ b/assignment-f/gimbal-html.html
@@ -2,6 +2,111 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<style>
+			* {
+				box-sizing: border-box;
+			}
+			
+			body {
+				margin: 0;
+				font-family: Arial, Helvetica, sans-serif;
+			}
+			
+			.sidenav {
+				height: 100%;
+				width: 30vw;
+				position: fixed;
+				z-index: 1;
+				top: 0;
+				left: 0;
+				background-color: #111;
+				overflow-x: hidden;
+			}
+			
+			.sidenav a {
+				color: white;
+				padding: 16px;
+				text-decoration: none;
+				display: block;
+			}
+			
+			.sidenav a:hover {
+				background-color: #ddd;
+				color: black;
+			}
+			
+			.content {
+				margin-left: 30vw;
+				padding-left: 20px;
+				justify: center;
+			}
+			
+			.title {
+				text-align: center;
+				margin-left: auto;
+				margin-right: auto;
+				color: #fff;
+			}
+			
+			.slider-box {
+				padding: 10px 10px 10px 10px;
+				margin: 80px 10px 80px 10px;
+				border-width: 5px;
+				border-color: #fff;
+				border-style: double;
+				display: flex;
+				flex-direction: column;
+			}
+			
+			.slidecontainer {
+				width: 100%;
+			}
+			
+			.slider {
+				-webkit-appearance: none;
+				width: 100%;
+				height: 15px;
+				border-radius: 5px;
+				background: #fff;
+				outline: none;
+				opacity: 0.9;
+				-webkit-transition: .2s;
+				transition: opacity .2s;
+			}
+			
+			.slider::-webkit-slider-thumb {
+				-webkit-appearance: none;
+				appearance: none;
+				width: 25px;
+				height: 25px;
+				border-radius: 50%;
+				background: #4CAFFF;
+				cursor: pointer;
+			}
+			
+			.slider::-moz-range-thumb {
+				width: 25px;
+				height: 25px;
+				border-radius: 50%;
+				background: #4CAFFF;
+				cursor: pointer;
+			}
+			
+			.slider:hover {
+				opacity: 1;
+			}
+			
+			#true-title {
+				color: #000;
+			}
+			
+			#webgl-canvas {
+				display: block;
+				margin-left: auto;
+				margin-right: auto;
+			}
+		</style>
 		<script src="common/webgl-utils.js"></script>
 		<script src="common/init-shaders.js"></script>
 		<script src="common/model-view.js"></script>
@@ -35,7 +140,31 @@
 			}
 		</script>
 	</head>
-	<body>
-		<canvas id="webgl-canvas" width="1280" height="720"></canvas>
+	<body class="flex-container">
+		<div class="sidenav">
+			<h2 class="title">Gimbal Controls</h2>
+			<div class="slider-box">
+				<h3 class="title">Loop 1 Speed</h3>
+				<div class="slidecontainer">
+					<input type="range" min="-100" max="100" value="0" class="slider" id="slider-1">
+				</div>
+			</div>
+			<div class="slider-box">
+				<h3 class="title">Loop 2 Speed</h3>
+				<div class="slidecontainer">
+					<input type="range" min="-100" max="100" value="0" class="slider" id="slider-2">
+				</div>
+			</div>
+			<div class="slider-box">
+				<h3 class="title">Loop 3 Speed</h3>
+				<div class="slidecontainer">
+					<input type="range" min="-100" max="100" value="0" class="slider" id="slider-3">
+				</div>
+			</div>
+		</div>
+		<div class="content">
+			<h1 class="title" id="true-title">GIMBAL LOOPS</h1>
+			<canvas class="flex-object" id="webgl-canvas" width="1200px" height="800px"></canvas>
+		</div>
 	</body>
 </html>
